# berlin-aqi-MLOps

./: .dockerignore  .env.example  .gitignore  Berlin_AQI_MLOps_Planning_Document.docx  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  start.sh
api/: cache.py  features_runtime.py  history.py  main.py  model_loader.py  schemas.py  threshold_rule.py
docs/: presentation_brief.md
frontend/: app.py
notebooks/: eda.ipynb
src/: alerting.py  bundle.py  features.py  ingest.py  monitor.py  refresh.py  register.py  train.py
